# new-shortest-route

./: .breakpoints  NN_gravity_pressure.py  NNforSearch.py  POCnode2vec.py  README.md  a_star.py  compare_node_expansion.py  compare_speed.py  coordinate_functions.py  dijkstra.py  dijkstra_to_all.py  dijkstra_with_priority_que.py  expanded_nodes.py  fix_graph_data.py  generate_data.py  generate_data_greedy.py  get_degree_distribution.py  get_graph.py  graphml_to_pickle.py  gravity_pressure.py  greedy_forwarding_route.py  greedy_forwarding_with_edgelength.py  greedy_forwarding_with_edgeweight.py  greedy_manhattan.py  greedy_rpf.py  greedy_then_a_star.py  hyperbolic_embedder.py  hyperbolic_routing.py  kort.graphml  linear.py  main.py  node_functions.py  notes_to_self.txt  phd_spring.py  plot_dijkstra_to_all.py  pyproject.toml  requirements.txt  route_length_per_city.py  route_time_per_city.py  scale_free_greedy.py  (+8 more)
NNcities/: Brugge.data-00000-of-00001  Brugge.h5  Brugge.index  Manhattan.h5  Nairobi.data-00000-of-00001  Nairobi.index  New Dehli.data-00000-of-00001  New Dehli.h5  New Dehli.index  checkpoint
for_google/: Brugge.gpickle  Nairobi.gpickle  New Dehli.gpickle  Rio de Janeiro.gpickle
graph_graphml/: rio_de_janeiro_5km_(-22.908333, -43.196388).graphml
graph_pickle/: Brugge.gpickle  Manhattan.gpickle  Nairobi.gpickle  New Dehli.gpickle  Rio de Janeiro.gpickle
hyperbolic_saved/: Brugge.pickle  scale_free.pickle
node2vec_models/: Brugge  Brugge.emb  Brugge.model  Brugge.wordvectors  Manhattan.wordvectors  Nairobi.wordvectors  Rio de Janeiro.wordvectors
(+39 files in other folders)
