[tool.poetry]
name = "repl_python3_beta_new-shortest-route"
version = "0.1.0"
description = ""
authors = ["DavyDeprez <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.6.3"
osmnx = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
